loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:4: error: illegal start of simple expression
  for(j <-0 to c-1)){
                   ^